src/components/Nav/Nav.module.scss
@import 'shared';

.nav {
  @include z-index(main-nav);
  box-sizing: border-box;
  display: block;
  align-items: baseline;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: $navbar-height-mobile;

  @include media-tablet {
    height: $navbar-height-desktop;
  }

  > .navBar {
    display: flex;
    align-items: baseline;
    justify-content: space-between;
    width: 100%;
    max-width: 100vw;
    height: 100%;
    padding: px(30) px(13);

    @include media-tablet {
      padding: px(50) px(30);
    }

    @include media-desktopSm {
      padding: px(50) px(30);
    }

    > ul > li {
      display: inline-block;
      position: relative;
      list-style: none;
      text-align: center;

      .buddha {
        // fill: $white;
        height: px(46);
      }
    }

    .menuHamburger {
      @include z-index(menu-nav);
      position: relative;
      fill: $white;
      width: px(40);
      height: px(40);
      top: px(-5);

      .topBar {
        position: absolute;
        top: 37.5%;
        transform: translateY(-50%);
        right: 0;
        width: 100%;
        height: 2px;
        border-radius: 100px;
        background-color: $white;
      }

      .bottomBar {
        position: absolute;
        top: 62.5%;
        transform: translateY(-50%);
        right: 0;
        width: 75%;
        height: 2px;
        border-radius: 100px;
        background-color: $white;
      }
    }
  }

  .menu {
    position: absolute;
    background-color: transparent;
    top: 0;
    left: 0;
    text-align: left;
    width: 100%;
    height: calc(100vh - 100px);
    overflow: hidden;

    .menuBg {
      position: absolute;
      background-color: $white;
      transform: rotate(10.19deg);
      width: 150vw;
      height: 150vh;
      top: -25vh;
      left: -25vw;
    }

    .menuWrapper {
      display: flex;
      flex-direction: column-reverse;
      width: fit-content;
      height: fit-content;
      padding: px(120) px(13) px(60);

      @include media-tablet {
        padding: px(150) px(80);
        flex-direction: row;
      }
      @include media-desktopSm {
        padding: px(150) px(200);
      }

      .pageTitle {
        @include typography-menuPages;
        flex-direction: column-reverse;
        @include media-tablet {
          flex-direction: row;
          padding-left: px(100);
        }
      }

      .infoWrapper {
        flex-direction: column-reverse;
        @include media-tablet {
          flex-direction: row;
        }
      }

      .pagesWrapper {
        display: flex;
        flex-direction: column;
      }

      .infoSection {
        padding-top: px(20);
        @include media-tablet {
          padding-top: px(30);
        }
      }

      .title {
        @include typography-subtitle;
        padding-bottom: px(10);
        color: $dark-gray;
      }

      .desc {
        @include typography-subtitle;
        color: $black;
      }
    }
  }
}

